Only count actively upgrading nodes